# Market-Analyzer-Pro

./: .env.example  .gitignore  CLAUDE 23.49.07.md  CLAUDE.md  Dockerfile  Makefile  Procfile  alembic.ini  claude-progress.md  claude-tasks.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ТЗ-Market-Analyzer-Pro.html
alembic/: env.py
analyst-reports/: backtest-final-analysis.md  backtest-r4-analysis.md  backtest-r5-final-decision.md  backtest-v5-final-analysis.md  data-audit-report.md  data-sources-guide.md  data-sources-research.md  strategy-analysis-and-backtest-plan.md  v6-backtest-calibration-analysis.md  v6-cal-r3-analysis.md  v6-calibrated-r2-analysis.md
analyst-requirements/: backtest-filter-pipeline-requirements.md  backtest-final-analysis-requirements.md  backtest-methodology-requirements.md  backtest-performance-requirements.md  backtest-r4-requirements.md  v6-calibration-r2-requirements.md  v6-calibration-r3-requirements.md  v6-calibration-requirements.md
config/: swap_rates.json
data/: economic_calendar_full.csv
docs/: ANALYST_REPORT_BACKTEST_ANOMALIES.md  ARCHITECTURE.md  ARCHITECTURE_DECISION.md  ARCHITECT_PROMPT.md  BACKTEST_RESULTS_FINAL.md  BACKTEST_RESULTS_V1.md  BACKTEST_RESULTS_V5_P1.md  BACKTEST_RESULTS_V5_P2.md  BACKTEST_RESULTS_V5_P3.md  DEPLOYMENT.md  FIXES.md  PROJECT_INSTRUCTIONS_CLAUDE_AI.md  REQUIREMENTS.md  SPEC.md  SPEC_SIMULATOR_V2.md  SPEC_SIMULATOR_V3.md  SPEC_SIMULATOR_V4.md  SPEC_SIMULATOR_V5.md  SPEC_SIMULATOR_V6.md  SPEC_V2.md  SPEC_V3.md  TASKS.md  TASKS_V4.md  TASKS_V5.md  TASKS_V6.md  (+6 more)
(+216 files in other folders)
